<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <TableLayout
            android:id="@+id/table_wifi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TableRow>
            <TextView android:text="@string/ssid" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_ssid" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/ip_setting" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_ip_setting" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/ip_address" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_ip_address" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/gateway" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_gateway" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/network_prefix_length" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_network_prefix_length" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/dns_1" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_dns_1" android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/dns_2" android:layout_margin="10dp"/>
            <TextView android:id="@+id/textview_dns_2" android:layout_margin="10dp"/>
        </TableRow>
    </TableLayout>
    <Button
            android:id="@+id/button_setting_change"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/table_wifi_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <TextView
            android:text="@string/setting_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_setting_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
